@@ -11,6 +11,7 @@ All notable changes to this project will be documented in this file.
 Added
 - Add /api/keycloak/add-group endpoint
 - Add /api/keycloak/remove-group endpoint
+- Add /api/keycloak/add-user-to-group endpoint
 
 ### 2021-02-05 v0.0.74
 Added
